# subwg2-benchmarks

./: .gitignore  README.md  nvhpc-26.5-openacc-bug-reproducer.md  pyproject.toml  salmon-nvhpc265-bug-report.md
.claude/skills/benchmark-generator/: SKILL.md
.claude/skills/mvmc-benchmarking/: SKILL.md
.claude/skills/mvmc-build/: SKILL.md
.claude/skills/mvmc-reference/: SKILL.md
.claude/skills/salmon-benchmarking/: SKILL.md
.claude/skills/salmon-build/: SKILL.md
.claude/skills/salmon-reference/: SKILL.md
data/: base.nml  r12.nml
src/benchmark_generator/: __init__.py  cli.py  fom.py  mvmc.py  salmon.py
