[project]
name = "benchmark-generator"
version = "0.1.0"
description = "CLI for generating mVMC and SALMON benchmark inputs for Fugaku-like systems."
readme = "README.md"
authors = [
    { name = "William Dawson", email = "william.dawson@riken.jp" }
]
requires-python = ">=3.12"
dependencies = [
    "ase>=3.29.0",
    "f90nml>=1.5",
    "typer>=0.27.0",
]

[project.scripts]
benchgen = "benchmark_generator:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
